[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Shared/Behaviors/FlashOnHurt.gd" type="Script" id=1]

[node name="FlashOnHurt" type="Node"]
script = ExtResource( 1 )

[node name="ColorGray" type="Tween" parent="."]

[node name="ColorNormal" type="Tween" parent="."]

[connection signal="tween_completed" from="ColorGray" to="." method="_on_ColorGray_tween_completed"]
[connection signal="tween_completed" from="ColorNormal" to="." method="_on_ColorNormal_tween_completed"]
